# drapto

./: -  .clinerules  .cursorrules  .gitignore  .roorules  AGENTS.md  CLAUDE.md  Cargo.toml  PROJECT_STRUCTURE_REFACTOR.md  README.md  RUST_REWRITE_PLAN.md  build.sh  build_ffmpeg.sh  check-ci.sh  check-deps.sh  codemcp.toml  debug-filesize  debug-filesize.rs  drapto.go  drapto.toml.example  drapto_test.go  events.go  film_grain_sampling_plan.md  go.mod  go.sum  ntfy_implementation_plan.md  pytest.ini  reporter.go  setup.py  subtitles_test.rs  test_duration.rs
.github/: dependabot.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_ISSUES.md  CONFIGURATION.md  FUNCTIONALITY.md  HandBrakeCLI.md  MEDIA_HANDLING.md  OPERATIONS.md  PRESETS.md  PROCESSING.md  RECOMMENDATIONS.md  REFACTORING_PLAN.md  REWRITE.md  TARGET_STRUCTURE.md  USAGE.md  chunked-encoding.md  cli_design_guide.md  configuration.md  distributed-encoding-feasibility.md  ffmpeg_integration_plan.md  film_grain_technical.md  grain_detection.md  grain_detection_plan.md  handbrake_json_example.txt  handbrake_json_implementation_plan.md  handbrake_json_integration_design.md  hqdn3d_implementation_plan.md  ntfy_integration_plan.md  refactoring_plan.md  spindle-integration.md  test_plan.md  (+6 more)
drapto-cli/: Cargo.toml  README.md  handbrake_defaults.toml
drapto-cli/src/: args.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  output.rs  output_path.rs  platform.rs  progress.rs  terminal.rs
drapto-cli/src/commands/: encode.rs  info.rs  mod.rs  validate.rs
drapto-cli/tests/: cli_integration.rs  ntfy_integration.rs
drapto-core/: Cargo.toml  README.md
drapto-core/examples/: ab_av1_encoding.rs  audio_encoding.rs  config_example.rs  memory_tracking.rs  muxer.rs  parallel_encoding.rs  segment_merger.rs  summary_example.rs  validation_example.rs
drapto-core/src/: config.rs  discovery.rs  error.rs  hardware_accel.rs  hardware_decode.rs  lib.rs  logging.rs  notifications.rs  progress.rs  progress_reporting.rs  styling.rs  system_info.rs  temp_files.rs  terminal.rs  terminal_output.rs  utils.rs
drapto-core/src/config/: builder.rs  detection.rs  directory.rs  encoding.rs  logging.rs  mod.rs  resource.rs  utils.rs  validation.rs
drapto-core/src/detection/: format.rs  mod.rs  scene.rs
drapto-core/src/encoding/: audio.rs  memory.rs  merger.rs  mod.rs  muxer.rs  parallel.rs  pipeline.rs  segmentation.rs  video.rs
drapto-core/src/events/: json_handler.rs  mod.rs
drapto-core/src/file_logging/: mod.rs  setup.rs
drapto-core/src/media/: info.rs  mod.rs  probe.rs  session.rs
drapto-core/src/notifications/: abstraction.rs  mod.rs  ntfy.rs
drapto-core/src/presentation/: mod.rs  template_event_handler.rs  template_presenter.rs  templates.rs
drapto-core/src/processing/: analysis.rs  audio.rs  crop_detection.rs  detection.rs  encode_params.rs  film_grain.rs  formatting.rs  grain_analysis.rs  grain_types.rs  mod.rs  noise_analysis.rs  reporting.rs  validation.rs  video.rs  video_properties.rs
drapto-core/src/processing/detection/: crop_analysis.rs  grain_analysis.rs  mod.rs  properties.rs
drapto-core/src/processing/detection/grain_analysis/: constants.rs  knee_point.rs  mod.rs  refinement.rs  types.rs  utils.rs
drapto-core/src/processing/film_grain/: analysis.rs  mod.rs  sampling.rs  types.rs
drapto-core/src/processing/validation/: audio.rs  dimensions.rs  duration.rs  hdr.rs  mod.rs  result.rs  validate.rs  video.rs
drapto-core/src/progress_reporting/: ffmpeg_handler.rs
drapto-core/src/reporting/: mod.rs  summary.rs
drapto-core/src/util/: command.rs  jobs.rs  logging.rs  mod.rs  scheduler.rs
drapto-core/src/validation/: audio.rs  mod.rs  quality.rs  report.rs  subtitles.rs  sync.rs  video.rs
drapto-core/tests/: core_tests.rs  detect_crop_tests.rs  discovery_tests.rs  ffmpeg_wrapper_tests.rs  film_grain_tests.rs  mod.rs  process_videos_ffmpeg_fail_tests.rs  process_videos_ntfy_fail_tests.rs  process_videos_success_tests.rs  test_builder.rs  test_config_file.rs  test_default_config.rs  test_env_vars.rs  test_format_detection.rs  test_muxer.rs  test_scene_detection.rs  test_segment_merger.rs  test_sync_validation.rs  test_validation_quality.rs  test_validation_report.rs  test_video_detection.rs  test_video_segmentation.rs  utils_tests.rs
drapto-rs/: .gitignore  Cargo.toml  README.md
drapto-rs/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs
drapto-rs/src/command/: jobs.rs  mod.rs
drapto-rs/src/ffprobe/: exec.rs  media.rs  mod.rs  session.rs
drapto-rs/src/validation/: audio.rs  mod.rs  quality.rs  subtitles.rs  video.rs
drapto-rs/src/video/: detection.rs  mod.rs  scene_detection.rs
drapto-rs/tests/: test_scene_detection.rs  test_video_detection.rs
reference/: Cargo.toml  RUST_REWRITE_PLAN.md  analysis.rs  hbencode.sh  mod.rs  package-lock.json  sampling.rs
reference/drapto/: __init__.py  muxer.py  utils.py
reference/drapto-cli/src/: lib.rs  main.rs
reference/drapto-cli/src/commands/: mod.rs
reference/drapto-core/src/: error.rs  system_info.rs
reference/drapto-core/src/config/: mod.rs
reference/drapto-core/src/file_logging/: mod.rs  setup.rs
reference/drapto-core/src/processing/: analysis.rs  audio.rs  encode_params.rs  mod.rs  video.rs  video_properties.rs
reference/drapto-core/src/processing/validation/: audio.rs  dimensions.rs  hdr.rs  mod.rs  result.rs  validate.rs  video.rs
reference/drapto-core/src/reporting/: mod.rs
reference/drapto/ffprobe/: __init__.py  exec.py  media.py  session.py
reference/drapto/processing/: __init__.py
reference/drapto/validation/: __init__.py  validation_report.py  validation_video.py
reference/drapto/video/: encode_commands.py  hardware.py  segment_encoding_scheduler.py  segment_merger.py  standard_encoder.py
reference/drapto/video/segmentation/: segmentation_main.py
reference/tests/: conftest.py  test_audio_encoding.py  test_command_builders.py  test_command_jobs.py  test_scene_detection.py  test_segmentation_main.py  test_validation_audio.py  test_video_detection.py
tools/drapto-scd/: Cargo.toml
tools/drapto-scd/src/: main.rs
(+179 files in other folders)
