[package]
name = "drapto-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "drapto"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "env"] } # Add "env" feature for env var support
chrono = "0.4"
daemonize = "0.5" # For daemonizing the process
drapto-core = { path = "../drapto-core" } # Non-optional, no features here
env_logger = "0.11" # Added for standard logging
log = "0.4" # Added as env_logger uses the log facade
colored = "2" # For adding color to log output via macros and direct prints
