# ============================================================================
# drapto-cli/Cargo.toml
# ============================================================================
#
# DRAPTO CLI: Command-Line Interface for Drapto Video Processing
#
# This package provides the command-line interface for the Drapto video
# processing system, allowing users to interact with the core functionality
# through a convenient CLI.
#
# AI-ASSISTANT-INFO: Command-line interface for Drapto video processing system

[package]
name = "drapto"
version = "0.3.0"
edition = "2024"
description = "Command-line interface for the Drapto video processing system"
authors = ["Drapto Contributors"]

[[bin]]
name = "drapto"
path = "src/main.rs"

[dependencies]
# ---- Command Line Interface ----
clap = { version = "4", features = ["derive", "cargo", "env"] }  # Command-line argument parsing

# ---- Date and Time ----
chrono = "0.4"                   # Date and time utilities

# ---- Drapto Core ----
drapto-core = { path = "../drapto-core" }  # Core library for video processing

# ---- Logging ----
log = "0.4"                      # Logging facade
fern = "0.7"                     # Advanced logging configuration with file output

# ---- Terminal UI ----
console = "0.16"                 # Terminal utilities and color detection
