# ============================================================================
# drapto-core/Cargo.toml
# ============================================================================
#
# DRAPTO CORE: Core Library for Video Processing and Optimization
#
# This package contains the core functionality of the Drapto video processing
# system, including video analysis, encoding, and optimization features.
#
# AI-ASSISTANT-INFO: Core library for Drapto video processing system

[package]
name = "drapto-core"
version = "0.2.0"
edition = "2024"
description = "Core library for the Drapto video processing and optimization system"
authors = ["Drapto Contributors"]

[dependencies]
# ---- File System Operations ----
tempfile = "3"                   # Temporary file and directory management


# ---- Error Handling ----
thiserror = "1.0"                # Error definition and handling
anyhow = "1.0"                   # Error handling and context

# ---- Serialization ----
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization framework
serde_json = "1.0"               # JSON support for serde

# ---- Logging ----
log = "0.4"                      # Logging facade
log4rs = "1.3"                   # Advanced logging configuration


# ---- Randomization ----
rand = "0.8"                     # Random number generation for crop detection sampling

# ---- Parallelization ----
rayon = "1.11"                   # Data parallelism for concurrent processing

# ---- Notifications ----
ntfy = { version = "0.7.0", default-features = false, features = ["blocking"] }  # Push notifications


# ---- FFmpeg Integration ----
ffmpeg-sidecar = "2.0.5"         # FFmpeg process execution and management

# ---- Terminal UI ----
console = "0.15"                 # Terminal utilities and color detection
indicatif = { version = "0.17", features = ["improved_unicode"] }  # Progress bars and spinners

# ---- Media Analysis ----
ffprobe = "0.3.0"                # FFprobe media file analysis
