[package]
name = "drapto"
version = "0.1.0"
edition = "2021"
authors = ["drapto contributors"]
description = "Video encoding tool with parallel processing capabilities"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/yourusername/drapto-rs"
keywords = ["video", "encoding", "av1", "ffmpeg"]
categories = ["multimedia", "command-line-utilities"]

[dependencies]
ffmpeg-the-third = "3.0.1"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"