[package]
name = "drapto-scd"
version = "0.1.0"
edition = "2021"
description = "Scene change detection helper for drapto"
license = "MIT"

[dependencies]
av-scenechange = { version = "0.12", features = ["ffmpeg"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
lto = true
strip = true
